many functions added
